# lib-hotdog-sv

./: README.md  pyproject.toml
src/: hotdog_parser.py
src/core/: hotdog_file_loader.py  hotdog_loader.py
